# pop-pdhg-reproducibility

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  download_data.py  prepare_repro_data.py
data/miplib2017/: README.md  knapsack_50.mps
data/miplib2017_sec/: README.md
examples/: run_p0282.py
experiments/baselines/: run_gurobi.py  run_scip.py
experiments/results/: ablation_study_results.json  ablation_summary.csv  gurobi_results.json  paper_benchmark_robustness.json  paper_benchmark_robustness.runs.csv  paper_benchmark_robustness.summary.csv  paper_benchmark_verified.json  parameter_sensitivity_results.json  quantum_pop_pdhg_benchmark.json  scip_results.json  sec_candidate_pool.csv  sec_candidate_pool.json  sec_extended_benchmark.json  sec_extended_benchmark.runs.csv  sec_extended_benchmark.summary.csv  sec_extended_benchmark_v2.json  sec_extended_benchmark_v2.runs.csv  sec_extended_benchmark_v2.summary.csv  sec_instance_catalog.csv  sec_instance_catalog.json  sec_metaheuristic_benchmark.json  sec_metaheuristic_benchmark.runs.csv  sec_metaheuristic_benchmark.summary.csv  sec_metaheuristic_benchmark_v2.json  sec_metaheuristic_benchmark_v2.runs.csv  sec_metaheuristic_benchmark_v2.summary.csv  sec_metaheuristic_benchmark_v3_6inst.json  sec_selected_instances.csv  sec_selected_instances.json  sec_statistics.extended.csv  sec_statistics.json  sec_statistics.meta_pairwise.csv  sec_statistics.meta_ranks.csv  sec_statistics_v2.extended.csv  (+6 more)
src/: __init__.py
tests/: test_pdhg.py  test_shade_p0282.py
(+89 files in other folders)
