[project]
name = "quantum-solver"
version = "0.1.0"
description = "Quantum-Inspired GPU-Accelerated Mixed Integer Programming Solver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Research Team" }
]
keywords = ["optimization", "mip", "quantum-inspired", "gpu", "pdhg"]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "jax[cpu]>=0.4.20",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "gurobipy>=11.0.0",
    "pyscipopt>=5.0.0",
    "psutil>=7.2.2",
    "scienceplots>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
cuda = [
    "jax[cuda12_pip]>=0.4.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
